fixed clear arr issue and btn spacing

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ button:hover {
     flex-wrap: wrap;
     position: relative;
     margin-top: 1rem;
-    top: -60px;
+    top: -55px;
 }
 
 #copy-btn,
